--- a/package.json
+++ b/package.json
@@ -4,28 +4,27 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "node_modules/.bin/mocha"
+    "test": " npx jest --forceExit"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "express-session": "^1.13.0",
-    "helmet": "^1.1.0",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "node-uuid": "^1.4.7",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "express-session": "^1.15.6",
+    "helmet": "^3.8.2",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.9",
-    "pg": "^4.4.3",
+    "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.15.1",
-    "serve-favicon": "~2.3.0"
+    "pug": "2.0.0-beta11",
+    "sequelize": "^4.33.4",
+    "uuid": "3.3.2"
   },
   "devDependencies": {
-    "mocha": "^2.4.5",
-    "passport-stub": "^1.1.1",
-    "supertest": "^1.2.0"
+    "jest": "25.1.0",
+    "passport-stub": "1.1.1",
+    "supertest": "3.1.0"
   }
 }
